# cpp-playground

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  LICENSE  README.md  bb.sh  quick.bat  run-cmake.bat  run-cmake.sh
cmake/: BoostBuilder.cmake  ThirdParty.cmake
first/: CMakeLists.txt  main.cpp  message.proto
